tests/examples/good/garbage_collector/good500.lat
int main() {
    (new A).a = 5;
    return 0;
}

class A {
    int a;
}
