tests/examples/bad/class_member_method_access_not_a_class.lat
int main() {
    int var;
    var.f();
    return 1;
}
 
class A {
    int a;
    int f() {return 1;}
}

